WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255242
imported/w3c/web-platform-tests/preload/modulepreload.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=255242
Summary
imported/w3c/web-platform-tests/preload/modulepreload.html is a flaky failure
Ryosuke Niwa
Reported
2023-04-10 13:42:09 PDT
This test is still flaky. <
rdar://107840455
>
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2023-04-10 13:42:55 PDT
https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fpreload%2Fmodulepreload.html
Ryosuke Niwa
Comment 2
2023-04-10 21:09:21 PDT
The root cause of the flakiness is ResourceTimingInformation using pointer value as its key for m_initiatorMap. When two resources of the same document happen to be allocated at the same address, we erroneously conclude that the resource timing information had already been added in ResourceTimingInformation::addResourceTiming.
Ryosuke Niwa
Comment 3
2023-04-10 21:30:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12603
EWS
Comment 4
2023-04-11 00:14:55 PDT
Committed
262810@main
(8096a949d5f7): <
https://commits.webkit.org/262810@main
> Reviewed commits have been landed. Closing PR #12603 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug